--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@
 :root {
   --shadow: #595959;
   --main-color: #ff003b;
+  --purple: #7b2cf7;
+  --orange: #fd614a;
   --black: #000;
   --white: #fff;
 }
@@ -43,10 +45,33 @@ body::before {
   z-index: -1;
   width: 100%;
   height: 29%;
-  background-color: var(--main-color);
+  background-color: transparent;
+  background-image: radial-gradient(
+      circle at 20% 30%,
+      var(--main-color) 30%,
+      transparent 50%
+    ),
+    radial-gradient(circle at 80% 40%, var(--purple) 30%, transparent 50%),
+    radial-gradient(circle at 50% 60%, var(--orange) 40%, transparent 90%);
+  background-size: 200% 200%;
+  background-repeat: no-repeat;
+  background-blend-mode: screen;
+  animation: lavaMotion 10s ease-in-out infinite;
   transform: skewY(-10deg);
   transform-origin: top left;
   box-shadow: 0rem 0.1rem 1rem var(--shadow);
+}
+
+@keyframes lavaMotion {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 
 header {
@@ -183,11 +208,13 @@ header {
   background-image: conic-gradient(
     from var(--angle),
     transparent 70%,
+    var(--purple),
+    var(--orange),
     var(--main-color)
   );
   inset: -5px;
   z-index: -1;
-  animation: 3s spin linear infinite;
+  animation: 4s spin linear infinite;
 }
 
 .grid-container article:hover::before {
